# QUEST

./: .coverage  .coveragerc  .gitignore  CLAUDE.md  Cargo.toml  LICENSE  README.md  TRACKER.md  conftest.py  proof.toml  repo-map.toml
.github/workflows/: rust.yml
.roles/: ROLE.md
.roles/adventure-craft/: table-module-editor.md  treasure-story-curator.md
.roles/engine/: dice-state-auditor.md
.roles/parliament/: rubric-governance-steward.md  session-integrity-auditor.md
.roles/playtest/: player-style-observer.md
adventures/0001-tomb-of-the-silver-rose/: README.md  lint-report-2026-04-18.md  module.md  premise.md
adventures/0002-the-bone-collector-trap/: README.md  lint-report-2026-04-18.md  module.md  premise.md
adventures/0003-the-silversmiths-mirror/: README.md  module.md  premise.md
adventures/0004-the-wrath-coin/: README.md  module.md  premise.md
adventures/0005-the-pride-circlet/: README.md  module.md  premise.md
adventures/0006-the-thread-that-frays/: README.md  module.md  premise.md
adventures/0007-the-silver-ingot-confession/: README.md  module.md  premise.md
campaign/: seed-tracker-halted-spire.md  seed-tracker-thorngate-watch.md  seed-tracker.md
personas/: README.md  gygax.md  jaquays.md  moldvay.md  patrick-stuart.md  playtest-innovations.md  playtest-rubric.md  rubric.md  schick.md
research/: Makefile
scripts/: dice.sh  marathon.py  module_binder.py  run_beats.py
src/: cli.rs  lib.rs  main.rs
state/: dice_log.jsonl  event_log.jsonl  session.json
tests/: test_cli.py  test_integration.py  test_marathon_direct.py
(+1282 files in other folders)
